--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -60,6 +60,7 @@ sp-version = { default-features = false, git = 'https://github.com/paritytech/su
 
 pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-ethereum = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
+pallet-crowdloan-rewards = { default-features = false, path = '../pallets/crowdloan-rewards' }
 
 fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 
@@ -104,6 +105,7 @@ std = [
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-evm/std',
     'pallet-ethereum/std',
+    'pallet-crowdloan-rewards/std',
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
