--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -66,13 +66,18 @@ fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/fron
 
 cumulus-pallet-parachain-system = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
 cumulus-primitives-core = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-pallet-xcm-handler =  { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+cumulus-pallet-xcmp-queue =  { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+cumulus-primitives-utility = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+cumulus-pallet-xcm = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+cumulus-ping = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+
 parachain-info = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
 
 polkadot-parachain = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 xcm = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 xcm-executor = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 xcm-builder = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
+pallet-xcm = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 
 [features]
 default = ['std']
@@ -119,10 +124,13 @@ std = [
     'sp-version/std',
     'sp-io/std',
     'parachain-info/std',
+	'cumulus-pallet-xcmp-queue/std',
+	'cumulus-pallet-xcm/std',
+	'cumulus-primitives-core/std',
+	'cumulus-primitives-utility/std',
+	'cumulus-ping/std',
     'cumulus-pallet-parachain-system/std',
-    'cumulus-primitives-core/std',
     'xcm/std',
     'xcm-builder/std',
     'xcm-executor/std',
-    'cumulus-pallet-xcm-handler/std',
 ]
