--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,7 +31,9 @@ hex-literal = '0.3.1'
 hex = '0.4.3'
 
 # local dependencies
-polkafoundry-runtime = { path = '../runtime', version = '0.0.1' }
+polkafoundry-runtime = { path = '../runtime/polkafoundry', version = '0.0.1', optional = true }
+polkasmith-runtime = { path = '../runtime/polkasmith', version = '0.0.1', optional = true }
+halongbay-runtime = { path = '../runtime/halongbay', version = '0.0.1', optional = true }
 
 # Substrate dependencies
 frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
@@ -69,6 +71,9 @@ sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'ro
 sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-storage = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 
 substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 
@@ -77,6 +82,8 @@ fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 
 fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
+frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 
 cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
 cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
@@ -84,6 +91,7 @@ cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', br
 cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
 cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
 cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+clap = { version = '2.33' }
 
 polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
@@ -92,7 +100,25 @@ polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch
 polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
 
 pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
+polkafoundry-primitives = { path = '../primitives' }
 
 [features]
-default = []
-runtime-benchmarks = ['polkafoundry-runtime/runtime-benchmarks']
+default = [
+    'halongbay'
+]
+polkafoundry = [
+    'polkafoundry-runtime'
+]
+polkasmith = [
+    'polkasmith-runtime'
+]
+halongbay = [
+    'halongbay-runtime'
+]
+
+runtime-benchmarks = [
+    'polkafoundry-runtime/runtime-benchmarks',
+    'polkasmith-runtime/runtime-benchmarks',
+    'halongbay-runtime/runtime-benchmarks',
+]
+
