--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,6 +31,8 @@ hex-literal = '0.3.1'
 hex = '0.4.3'
 
 # local dependencies
+author-inherent = { path = '../pallets/author-inherent' }
+
 polkafoundry-runtime = { path = '../runtime/polkafoundry', version = '0.0.1', optional = true }
 polkasmith-runtime = { path = '../runtime/polkasmith', version = '0.0.1', optional = true }
 halongbay-runtime = { path = '../runtime/halongbay', version = '0.0.1', optional = true }
