--- a/runtime/halongbay/Cargo.toml
+++ b/runtime/halongbay/Cargo.toml
@@ -59,6 +59,7 @@ sp-version = { default-features = false, git = 'https://github.com/paritytech/su
 pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-ethereum = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-crowdloan-rewards = { default-features = false, path = '../../pallets/crowdloan-rewards' }
+polkafoundry-staking = { default-features = false, path = '../../pallets/polkafoundry-staking' }
 
 fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 
@@ -112,6 +113,7 @@ std = [
     'pallet-ethereum/std',
     'pallet-crowdloan-rewards/std',
     'polkafoundry-primitives/std',
+    'polkafoundry-staking/std',
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
