--- a/runtime/polkafoundry/Cargo.toml
+++ b/runtime/polkafoundry/Cargo.toml
@@ -57,7 +57,7 @@ sp-version = { default-features = false, git = 'https://github.com/paritytech/su
 
 pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-ethereum = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-pallet-crowdloan-rewards = { default-features = false, path = '../../pallets/crowdloan-rewards' }
+#pallet-crowdloan-rewards = { default-features = false, path = '../../pallets/crowdloan-rewards' }
 
 fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 
@@ -108,7 +108,7 @@ std = [
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-evm/std',
     'pallet-ethereum/std',
-    'pallet-crowdloan-rewards/std',
+#    'pallet-crowdloan-rewards/std',
     'polkafoundry-primitives/std',
     'sp-api/std',
     'sp-block-builder/std',
