--- a/runtime/halongbay/Cargo.toml
+++ b/runtime/halongbay/Cargo.toml
@@ -63,6 +63,7 @@ pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/
 pallet-ethereum = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-crowdloan-rewards = { default-features = false, path = '../../pallets/crowdloan-rewards' }
 polkafoundry-staking = { default-features = false, path = '../../pallets/polkafoundry-staking' }
+pallet-treasury = { default-features = false, path = "../../pallets/treasury" }
 
 fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 
@@ -117,6 +118,7 @@ std = [
     'pallet-evm/std',
     'pallet-ethereum/std',
     'pallet-crowdloan-rewards/std',
+    'pallet-treasury/std',
     'pallet-election-provider-multi-phase/std',
     'polkafoundry-primitives/std',
     'polkafoundry-staking/std',
