--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,6 +29,7 @@ codec = { package = 'parity-scale-codec', version = '2.0.0' }
 serde = { features = ['derive'], version = '1.0.119' }
 hex-literal = '0.3.1'
 hex = '0.4.3'
+async-io = "1.3"
 
 # local dependencies
 author-inherent = { path = '../pallets/author-inherent' }
