--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,7 +17,7 @@ name = 'polkafoundry'
 targets = ['x86_64-unknown-linux-gnu']
 
 [build-dependencies]
-substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 [dependencies]
 jsonrpc-core = '15.1.0'
@@ -29,6 +29,7 @@ codec = { package = 'parity-scale-codec', version = '2.0.0' }
 serde = { features = ['derive'], version = '1.0.119' }
 hex-literal = '0.3.1'
 hex = '0.4.3'
+async-trait = { version = "0.1.48" }
 
 # local dependencies
 author-inherent = { path = '../pallets/author-inherent' }
@@ -38,71 +39,76 @@ polkasmith-runtime = { path = '../runtime/polkasmith', version = '0.0.1', option
 halongbay-runtime = { path = '../runtime/halongbay', version = '0.0.1', optional = true }
 
 # Substrate dependencies
-frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', features = ['wasmtime'] }
-sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', features = ['wasmtime'] }
-sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', features = ['wasmtime'] }
-sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-consensus-manual-seal = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'] }
+sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'] }
+sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'] }
+sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-consensus-manual-seal = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-storage = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-storage = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-fc-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+fc-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
-cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
+cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
 clap = { version = '2.33' }
 
-polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
-polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
-polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
-polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
-polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'rococo-v1' }
+polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
+polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
+polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
+polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
 
-pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-polkafoundry-primitives = { path = '../primitives' }
+pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+runtime-primitives = { path = '../primitives' }
 
 [features]
 default = [
