--- a/runtime/precompiles/Cargo.toml
+++ b/runtime/precompiles/Cargo.toml
@@ -10,13 +10,13 @@ edition = '2018'
 log = '0.4.8'
 rustc-hex = { version = '2.0.1', default-features = false }
 
-sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
-pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-pallet-evm-precompile-dispatch = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-pallet-evm-precompile-modexp = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
-pallet-evm-precompile-simple = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
+pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+pallet-evm-precompile-dispatch = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+pallet-evm-precompile-modexp = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
+pallet-evm-precompile-simple = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
 
 [features]
 default = [ "std" ]
