--- a/swapery_bot/docker-compose.yml
+++ b/swapery_bot/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - redis
+      - swapery-redis
     command: sh start.sh
     networks:
       botlink:
