--- a/pallets/polkafoundry-staking/Cargo.toml
+++ b/pallets/polkafoundry-staking/Cargo.toml
@@ -29,6 +29,8 @@ frame-election-provider-support = { default-features = false, git = 'https://git
 
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 
 [features]
 default = ['std']
@@ -40,6 +42,8 @@ std = [
     'frame-election-provider-support/std',
     'pallet-balances/std',
     'pallet-utility/std',
+    'pallet-authorship/std',
+    'pallet-session/std',
     'log/std',
     'sp-core/std',
     'sp-io/std',
