--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "polkafoundry-primitives"
+name = "runtime-primitives"
 version = "0.0.1"
 authors = ["Tung <tung.nguyen@icetea.io"]
 edition = "2018"
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rococo-v1" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rococo-v1" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rococo-v1" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
 
 [features]
 default = ["std"]
