--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
-polkafoundry-primitives = { default-features = false, path = '../../primitives' }
+frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
+frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
+sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
+runtime-primitives = { default-features = false, path = '../../primitives' }
 
 [features]
 default = ["std"]
@@ -18,5 +18,5 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-runtime/std',
-    'polkafoundry-primitives/std',
+    'runtime-primitives/std',
 ]
